// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ForOfStatement > client > should skip server for-of statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  for (const item of items) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
      l: [],
      m: []
    });
  }
};",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,KAAK,MAAMC,IAAI,IAAIC,KAAK;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA;MAAAC,CAAA;IAAA;EAAA;AAI1B,CAAC",
    "names": [
      "example",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        for (const item of items) {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [value],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,KAAK,MAAMC,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA,GADlBP,KAAK;IAAAQ,CAAA;EAAA;AAAA",
    "names": [
      "value",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      for (const item of items) {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > client > should transform break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 0) {
    break;
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,KAAK,MAAMA,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > client > should transform continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 1) {
    continue;
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,KAAK,MAAMA,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > client > should transform labeled break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 0) {
    if (result_1 === "foo") {
      break foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG,EAAE,KAAK,MAAMC,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA,IAAAC,QAAA;MAAA,MAAAJ,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > client > should transform labeled continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 1) {
    if (result_1 === "foo") {
      continue foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG,EAAE,KAAK,MAAMC,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA,IAAAC,QAAA;MAAA,SAAAJ,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > client > should transform valid server for-of statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,KAAK,MAAMA,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;AAAA",
    "names": [
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      for (const item of items) {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  for (const item of items) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
      l: [value],
      m: []
    });
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-foo");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,KAAK,MAAMC,IAAI,IAAIC,KAAK;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA,GADlBP,KAAK;MAAAQ,CAAA;IAAA;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        for (const item of items) {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ForOfStatement > server > should skip server for-of statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  for (const item of items) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
      l: [],
      m: []
    });
  }
};",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    $$run_1(ctx_1, doStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAIUA,OAAA,CAAAC,KAAA,EAAAC,OAAO;EAAG,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-example", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,KAAK,MAAMC,IAAI,IAAIC,KAAK;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA;MAAAC,CAAA;IAAA;EAAA;AAI1B,CAAC",
    "names": [
      "example",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        for (const item of items) {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ForOfStatement > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [value],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff, ctx_1.l[0]);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAIQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,EAAAD,KAAA,CAAAE,CAAA,IAAO;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "l",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,KAAK,MAAMC,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA,GADlBP,KAAK;IAAAQ,CAAA;EAAA;AAAA",
    "names": [
      "value",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      for (const item of items) {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ForOfStatement > server > should transform break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 0) {
    break;
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    if ($$run_1(ctx_1, cond)) {
      await $$run_1(ctx_1, doStuff, value);
    } else {
      return [0, null];
    }
    await $$run_1(ctx_1, doMoreStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,IAAAA,OAAA,CAAAC,KAAA,EAAIC,IAAI,GAAI;MACV,MAAAF,OAAA,CAAAC,KAAA,EAAME,OAAO,EAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAAJ,OAAA,CAAAC,KAAA,EAAMI,WAAW,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,KAAK,MAAMA,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ForOfStatement > server > should transform continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 1) {
    continue;
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    if ($$run_1(ctx_1, cond)) {
      await $$run_1(ctx_1, doStuff, value);
    } else {
      return [1, null];
    }
    await $$run_1(ctx_1, doMoreStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,IAAAA,OAAA,CAAAC,KAAA,EAAIC,IAAI,GAAI;MACV,MAAAF,OAAA,CAAAC,KAAA,EAAME,OAAO,EAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAAJ,OAAA,CAAAC,KAAA,EAAMI,WAAW,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,KAAK,MAAMA,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA;EAAA;AAAA",
    "names": [
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ForOfStatement > server > should transform labeled break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 0) {
    if (result_1 === "foo") {
      break foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    if ($$run_1(ctx_1, cond)) {
      await $$run_1(ctx_1, doStuff, value);
    } else {
      return [0, "foo"];
    }
    await $$run_1(ctx_1, doMoreStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,IAAAA,OAAA,CAAAC,KAAA,EAAIC,IAAI,GAAI;MACV,MAAAF,OAAA,CAAAC,KAAA,EAAME,OAAO,EAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAAJ,OAAA,CAAAC,KAAA,EAAMI,WAAW,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG,EAAE,KAAK,MAAMC,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA,IAAAC,QAAA;MAAA,MAAAJ,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ForOfStatement > server > should transform labeled continue statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
  if (type_1 === 1) {
    if (result_1 === "foo") {
      continue foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    if ($$run_1(ctx_1, cond)) {
      await $$run_1(ctx_1, doStuff, value);
    } else {
      return [1, "foo"];
    }
    await $$run_1(ctx_1, doMoreStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,IAAAA,OAAA,CAAAC,KAAA,EAAIC,IAAI,GAAI;MACV,MAAAF,OAAA,CAAAC,KAAA,EAAME,OAAO,EAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAAJ,OAAA,CAAAC,KAAA,EAAMI,WAAW,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG,EAAE,KAAK,MAAMC,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;EAAA,IAAAL,MAAA;IAAA,IAAAC,QAAA;MAAA,SAAAJ,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: for (const item of items) {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          continue foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ForOfStatement > server > should transform valid server for-of statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
for (const item of items) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-anonymous", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,KAAK,MAAMA,IAAI,IAAIC,KAAK;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;AAAA",
    "names": [
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      for (const item of items) {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ForOfStatement > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  for (const item of items) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
      l: [value],
      m: []
    });
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function () {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff, ctx_1.l[0]);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAKU,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,EAAAD,KAAA,CAAAE,CAAA,IAAO;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "l",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapBlock as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-foo", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,KAAK,MAAMC,IAAI,IAAIC,KAAK;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA,GADlBP,KAAK;MAAAQ,CAAA;IAAA;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "item",
      "items",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        for (const item of items) {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;
